new package.json updates

--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "todolist-review-app",
+  "name": "todo-mvc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/njagota/todo-mvc.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/njagota/todo-mvc/issues"
+  },
+  "homepage": "https://github.com/njagota/todo-mvc#readme",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.5",
-    "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20"
   }
 }
