--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,12 @@
-PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.nfzrd.mongodb.net/todolist?retryWrites=true&w=majority
+#LEONS OLD CODE
+# PORT = 2121
+# DB_STRING = mongodb+srv://demo:demo@cluster0.nfzrd.mongodb.net/todolist?retryWrites=true&w=majority
+# NODE_ENV=development
+# PORT=8626
+
+# Set your database/API connection information here
+# API_KEY=**************************
+# API_URL=**************************
+DB_STRING = mongodb+srv://njagota:kittycat3197@cluster0.ot0ns.mongodb.net/?retryWrites=true&w=majority
+#DB_STRING = mongodb+srv://njagota:kittycat3197@cluster0.ot0ns.mongodb.net/?retryWrites=true&w=0
+
